# maxwell-client-python

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: logging.json
maxwell/: action.py  client.py  connection.py  connection_mgr.py  frontend.py  listenable.py  master.py  msg_queue_mgr.py  publisher.py  subscriber.py  subscription_mgr.py  watcher.py
maxwell/client/: client.py  connection.py  connection_mgr.py  frontend.py  listenable.py  logger.py  master.py  msg_queue.py  msg_queue_mgr.py  subscription_mgr.py
test/: doer_test.py  master_test.py  publisher_test.py  request_test.py  subscriber_test.py  test_master.py  test_request.py  test_subscribe.py  watcher_test.py
