[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Xu Chaoqian", email = "chaoranxu@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "websockets >= 12.0",
  "aiohttp >= 3.9.3",
  "maxwell-protocol == 0.7.2",
  "maxwell-utils == 0.6.3",
]
description = "The maxwell client implementation for python."
license = {file = "LICENSE"}
name = "maxwell-client"
readme = "README.md"
requires-python = ">=3.7"
version = "0.10.1"

[project.optional-dependencies]
test = ["pytest >= 8.0.2", "pytest-asyncio >= 0.23.5", "pytest-cov >= 4.1.0"]

[project.urls]
changelog = "https://github.com/maxwell-dev/maxwell-client-python/CHANGELOG.md"
repository = "https://github.com/maxwell-dev/maxwell-client-python"

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(levelname)8s] %(asctime)s (%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "DEBUG"

[tool.hatch.build.targets.wheel]
packages = ["maxwell"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = [
  "maxwell",
] # list of folders that contain the packages (["."] by default)
